[gd_scene load_steps=6 format=3 uid="uid://drl2wvci7ojxl"]

[ext_resource type="Script" path="res://scripts/help.gd" id="1_fjwb0"]
[ext_resource type="Texture2D" uid="uid://60lsrl5h35kv" path="res://grafiche/scenes/back button.png" id="7_hmyvv"]
[ext_resource type="Texture2D" uid="uid://c6q8aq3pytop6" path="res://grafiche/scenes/cornice.png" id="8_jqi8v"]

[sub_resource type="LabelSettings" id="LabelSettings_40h6c"]
font_size = 150

[sub_resource type="LabelSettings" id="LabelSettings_icgdu"]
font_size = 150

[node name="help" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fjwb0")

[node name="Control" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="leftButton" type="Label" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -11.5
offset_right = 40.0
offset_bottom = 11.5
grow_vertical = 2
text = "<"
label_settings = SubResource("LabelSettings_40h6c")

[node name="ButtonLeft" type="Button" parent="leftButton"]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="rightButtone" type="Label" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -40.0
offset_top = -11.5
offset_bottom = 11.5
grow_horizontal = 0
grow_vertical = 2
text = ">"
label_settings = SubResource("LabelSettings_icgdu")

[node name="ButtonRight" type="Button" parent="rightButtone"]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.198
anchor_bottom = 0.11
offset_right = -43.096
offset_bottom = -13.28
scale = Vector2(1.23, 1.23)
texture = ExtResource("7_hmyvv")
expand_mode = 1

[node name="back" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = -1
anchor_right = 0.197
anchor_bottom = 0.111
offset_right = 0.0559845
offset_bottom = 0.071991
flat = true

[node name="cornice" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -397.0
offset_top = -238.0
offset_right = 392.0
offset_bottom = 160.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("8_jqi8v")

[connection signal="pressed" from="leftButton/ButtonLeft" to="." method="_on_button_left_pressed"]
[connection signal="pressed" from="rightButtone/ButtonRight" to="." method="_on_button_right_pressed"]
[connection signal="pressed" from="back" to="." method="_on_back_pressed"]
